[package]
name = "ulb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
toml = "0.8.2"
serde = { version = "1.0.210", features = ["derive"] }
colored = "2.1.0"
log = "0.4.22"
simplelog = "0.12.2"
anyhow = "1.0.89"  # For better error handling
walkdir = "2.5.0"  # For recursive directory walking
